@@ -282,7 +282,7 @@ int main(int argc, char **argv)
     { "version", no_argument, 0, 'v' },
     { NULL, 0, 0, 0 }
   };
-  while ((opt = getopt_long(argc, argv, "DCRvd:f:p:s:m:T:M:rN", long_options,
+  while ((opt = getopt_long(argc, argv, "CRvd:f:p:s:m:T:M:rN", long_options,
 			    NULL))
 	 != EOF)
     switch (opt) {
@@ -350,15 +350,11 @@ int main(int argc, char **argv)
 	if (sscanf(optarg, "%d", &n) == 1)
 	  set_minimum_size(n);
 	else
-	  error("bad size '%1'", optarg);
+	  error("invalid size '%1' in '-n' option argument ", optarg);
       }
       break;
     case 'r':
       one_size_reduction_flag = 1;
-      break;
-    case 'D':
-      warning("-D option is obsolete: use 'set draw_lines 1' instead");
-      draw_flag = 1;
       break;
     case 'N':
       no_newline_in_delim_flag = 1;
